testing out new slack notif format

--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -92,7 +92,9 @@ jobs:
         if: always() && steps.check.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Bid updates failed validation step. - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Bid updates failed validation step - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -103,7 +105,9 @@ jobs:
         if: always() && steps.apply.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Error applying bid updates to bing. - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Error applying bid updates to bing. - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -113,7 +117,9 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> Bing keyword bids update SUCCESS! - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> Bing keyword bids update SUCCESS! - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -123,7 +129,10 @@ jobs:
         if: failure()
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> Bing keyword bids update FAILURE - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Bing keyword bids update FAILURE - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
+          SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
