--- a/.github/workflows/bing_update_bids_tod.yml
+++ b/.github/workflows/bing_update_bids_tod.yml
@@ -81,7 +81,9 @@ jobs:
         if: always() && steps.compute.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> Error computing TOD modifiers.
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> Error computing TOD modifiers. - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -92,7 +94,9 @@ jobs:
         if: always() && steps.check.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> TOD modifiers failed validation step. - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> TOD modifiers failed validation step. - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -103,7 +107,9 @@ jobs:
         if: always() && steps.apply.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Error applying TOD modifiers to bing. - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Error applying TOD modifiers to bing. - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -113,7 +119,9 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> TOD modifiers update SUCESS! - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> TOD modifiers update SUCESS! - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -123,7 +131,10 @@ jobs:
         if: failure()
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
-          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> TOD modifiers update FAILURE - <S3_LOCATION|${{ env.S3_BUCKET_HTTP_URI }}>
+          SLACK_MESSAGE: \
+            <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> TOD modifiers update FAILURE - \
+            <${{ env.S3_BUCKET_HTTP_URI }}|S3_LOCATION>
+          SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
