--- a/models/bing/keywords/requirements.txt
+++ b/models/bing/keywords/requirements.txt
@@ -7,8 +7,8 @@ mysql-connector-python==8.0.21
 psycopg2-binary==2.8.5
 pendulum==2.1.2
 requests==2.24.0
-boto3==1.16.25
-botocore==1.19.25
+boto3
+botocore
 gsheets
 tqdm
 ipykernel
