--- a/models/bing/keywords/requirements.txt
+++ b/models/bing/keywords/requirements.txt
@@ -1,4 +1,4 @@
-git+ssh://git@github.com/healthcarecom/datascience-utils.git@master
+git+ssh://git@github.com/healthcarecom/datascience-utils.git@amal
 matplotlib==3.3.0
 numpy==1.19.1
 pandas==1.1.0
@@ -15,3 +15,4 @@ ipykernel
 bingads
 docutils
 s3fs
+uniplot
