--- a/.github/workflows/taboola_update.yml
+++ b/.github/workflows/taboola_update.yml
@@ -49,10 +49,10 @@ jobs:
           GIT_SSH_KEY: ${{ secrets.GIT_SSH_KEY }}
 
       - name: Perform update
-        id: compute
         run: |
           export PYTHONPATH=${GITHUB_WORKSPACE}:${PYTHONPATH}
           python ${GITHUB_WORKSPACE}/models/taboola/compute_bids_infer.py
+          python ${GITHUB_WORKSPACE}/models/taboola/compute_tod_mods.py
           python ${GITHUB_WORKSPACE}/models/taboola/check_bids.py
           python ${GITHUB_WORKSPACE}/models/taboola/apply_bids.py
 
