added id to bing keyword workflow

--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -1,4 +1,5 @@
 name: bing-update-bids-keyword
+id: bing-update-bids-keyword
 
 on:
   push:
@@ -8,8 +9,8 @@ on:
     paths:
       - models/bing/keywords/**
       - .github/workflows/bing_update_bids_keyword.yml
-  # schedule:
-  # - cron: "0 12 * * *" # 8 am EST
+  schedule:
+  - cron: "0 12 * * *" # 8 am EST
   workflow_dispatch:
 
 jobs:
