--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -13,6 +13,9 @@ on:
   - cron: "0 12 * * *" # 8 am EST
   
   workflow_dispatch:
+    inputs:
+      execution_date:
+        required: true
 
 jobs:
   update-keyword-bids:
