--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -3,8 +3,9 @@ name: bing-update-bids-keyword
 on:
   push:
     branches: 
-      - workspace_amal
+      # - workspace_amal
     #   - main
+      - workflow_test
     paths:
       - models/bing/keywords/**
       - .github/workflows/bing_update_bids_keyword.yml
