--- a/.github/workflows/taboola_restructure_account.yml
+++ b/.github/workflows/taboola_restructure_account.yml
@@ -11,7 +11,7 @@ on:
       - .github/workflows/taboola_restructure_account.yml
   
   schedule:
-  - cron: "0 12 * * *" # 8 am EST
+  - cron: "0 10 1 * *" # monthly @ 6 am EST
   
   workflow_dispatch:
     inputs:
@@ -69,7 +69,7 @@ jobs:
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
 
-      - name: Success notification
+      - name: Failure notification
         uses: rtCamp/action-slack-notify@v2
         if: cancelled() || failure()
         env:
